fix link & song spacing

--- a/src/pages/watch/watch.module.scss
+++ b/src/pages/watch/watch.module.scss
@@ -171,7 +171,7 @@
 			flex-direction: column;
 			gap: 0.5rem;
 
-			.youtubeLink {
+			.iconInfo {
 				display: flex;
 				align-items: center;
 				gap: 0.5rem;
@@ -181,10 +181,6 @@
 			}
 
 			.videoSong {
-				display: flex;
-				align-items: center;
-				gap: 0.35rem;
-
 				opacity: 0.75;
 			}
 		}
